# ViaLacteaVisualAnalytics

./: .gitignore
Code/: CMakeLists.txt  VisIVODesktop-vtk6_qt5.pro
Code/INSTALL/VTK/include/vtk-9.0/: vtkChemistryConfigure.h  vtkConfigure.h
Code/INSTALL/VTK/lib/: libvtkChartsCore-9.0.1.dylib  libvtkChartsCore-9.0.9.0.1.dylib  libvtkChartsCore-9.0.dylib  libvtkCommonColor-9.0.1.dylib  libvtkCommonColor-9.0.9.0.1.dylib  libvtkCommonColor-9.0.dylib  libvtkCommonComputationalGeometry-9.0.1.dylib  libvtkCommonComputationalGeometry-9.0.9.0.1.dylib  libvtkCommonComputationalGeometry-9.0.dylib  libvtkCommonCore-9.0.1.dylib  libvtkCommonCore-9.0.dylib  libvtkCommonDataModel-9.0.1.dylib  libvtkCommonDataModel-9.0.dylib  libvtkCommonExecutionModel-9.0.1.dylib  libvtkCommonExecutionModel-9.0.9.0.1.dylib  libvtkCommonExecutionModel-9.0.dylib  libvtkCommonMath-9.0.1.dylib  libvtkCommonMath-9.0.9.0.1.dylib  libvtkCommonMath-9.0.dylib  libvtkCommonMisc-9.0.1.dylib  libvtkCommonMisc-9.0.9.0.1.dylib  libvtkCommonMisc-9.0.dylib  libvtkCommonPython-9.0.1.dylib  libvtkCommonPython-9.0.9.0.1.dylib  libvtkCommonPython-9.0.dylib  libvtkCommonSystem-9.0.1.dylib  libvtkCommonSystem-9.0.9.0.1.dylib  libvtkCommonSystem-9.0.dylib  libvtkCommonTransforms-9.0.1.dylib  libvtkCommonTransforms-9.0.9.0.1.dylib  libvtkCommonTransforms-9.0.dylib  libvtkDICOMParser-9.0.1.dylib  libvtkDICOMParser-9.0.9.0.1.dylib  libvtkDICOMParser-9.0.dylib  libvtkDomainsChemistry-9.0.1.dylib  libvtkDomainsChemistry-9.0.9.0.1.dylib  libvtkDomainsChemistry-9.0.dylib  libvtkFiltersAMR-9.0.1.dylib  libvtkFiltersAMR-9.0.9.0.1.dylib  libvtkFiltersAMR-9.0.dylib  (+340 more)
Code/INSTALL/VTK/lib/cmake/vtk-9.0/: VTK-targets-debug.cmake  VTK-targets.cmake  VTK-vtk-module-find-packages.cmake  VTK-vtk-module-properties.cmake  VTKPython-targets-debug.cmake  VTKPython-targets.cmake  vtk-config.cmake  vtkmodules-vtk-python-module-properties.cmake
Code/INSTALL/VTK/lib/vtk/hierarchy/VTK/: vtkCommonPython-hierarchy.txt  vtkFiltersPython-hierarchy.txt  vtkIOExportGL2PS-hierarchy.txt  vtkPythonContext2D-hierarchy.txt  vtkRenderingContextOpenGL2-hierarchy.txt  vtkRenderingGL2PSOpenGL2-hierarchy.txt  vtkRenderingOpenGL2-hierarchy.txt  vtkRenderingUI-hierarchy.txt  vtkRenderingVolumeOpenGL2-hierarchy.txt  vtkWebCore-hierarchy.txt  vtkWebGLExporter-hierarchy.txt
Code/INSTALL/lib/: libcurl.dylib
Code/INSTALL/lib/cmake/CURL/: CURLConfigVersion.cmake  CURLTargets.cmake
Code/INSTALL/lib/pkgconfig/: libcurl.pc
Code/include/: customvtklegendscaleactor.h  vialactea.h  vlkbquery.h  vtklegendscaleactor.h
Code/remote/server/: test.py  vtk_server.py
Code/src/: CMakeLists.txt  contour.cpp  customvtklegendscaleactor.cpp  dcvisualizer.cpp  higalselectedsources.cpp  main.cpp  mainwindow.cpp  sedplotpointcustom.cpp  vialactea.cpp  vialacteainitialquery.cpp  visivoimporterdesktop.cpp  vlkbquery.cpp  vlkbquerycomposer.cpp  vlkbsimplequerycomposer.cpp  vtkFitsReader.cxx  vtkFitsUnstructuredReader.cxx  vtkFitsUnstructuredReader.h  vtklegendscaleactor.cpp  vtkwindow_new.cpp  vtkwindow_new.h
Code/ui/: aboutform.ui  lutcustomize.ui  plotwindow.ui  sedvisualizerplot.ui  vialactea.ui  vtktoolswidget.ui
PanoramicView/: openlayers.html  openlayers2.html
